# IrrigAI

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 09ceb934819b_irrigation_fingerprint_table.py  624229864a91_initial_schema.py  (+21 more)
backend/app/: access.py  active_records.py  auth.py  config.py  crypto.py  database.py  dependencies.py  heartbeat.py  job_lock.py  limiter.py  logging_config.py  main.py  metrics.py  seed.py  seed_credentials.py  worker.py  worker_health.py
backend/scripts/: add_conqueiros_depths.py  backfill_flowmeters.py  create_conqueiros_user.py  diag_myirrigation.py  diagnose_sector_swc.py  flowmeter_freshness.py  generate_recommendations.py  ingest_all_farms.py  ingest_flowmeters.py  innoliva_discover.py  onboard_innoliva.py  recompute_probe_calibration.py  repair_conqueiros_flowmeters.py  reset_soil_customization.py  set_admin_role.py  set_farm_credentials.py  sync_probe_depths.py  update_soil_presets.py
backend/tests/: conftest.py  test_adapters.py  test_adapters_myirrigation.py  test_agronomic_context.py  test_config_security.py  test_factory_project_id.py  test_flowmeter_run_classification.py  test_health.py  test_ingestion_run.py  test_ingestion_weather_plot.py  test_onboard_innoliva.py  test_per_depth_freshness.py  test_scheduler_classification.py  test_seed_credentials.py  test_water_event_persistence.py
(+383 files in other folders)
